...
  "coincontrol_tx_detail_amount_to_sent": "Amount to send",
  "coincontrol_tx_detail_change": "Change received",
  "coincontrol_tx_detail_cta1": "Send Transaction",
  "coincontrol_tx_detail_cta2": "Edit Transaction",
  "coincontrol_tx_detail_custom_fee_cta": "Confirm Fee",
...
  "component_24WordSeed": "24 Word Seed",
  "component_Apply": "Apply",
  "component_advanced": "Advanced",
  "component_apply": "Apply",
  "component_areYouSure": "Are you sure?",
  "component_back": "Back",
  "component_cancel": "Cancel",
  "component_confirm": "Confirm",
  "component_content": "Content",
  "component_continue": "Continue",
  "component_delete": "Delete",
  "component_device": "Device",
...
  "component_resetSorting": "Reset sorting",
  "component_retry": "Retry",
  "component_save": "Save",
  "component_searching": "Searching",
  "component_skip": "Skip",
...
  "envoy_scv_show_qr_heading": "On Passport, select Envoy App and scan this QR Code",
  "envoy_scv_show_qr_subheading": "This QR code provides information for validation and setup.",
  "envoy_support_community": "COMMUNITY",
  "envoy_support_documentation": "Documentation",
  "envoy_support_email": "Email",
...
  "exploreAddresses_searchError_notFound": "Address not found in the first {searchSpace} addresses.",
  "exploreAdresses_activityOptions_deleteAccount": "Delete Account",
  "exploreAdresses_activityOptions_editAccountName": "Edit Account Name",
  "exploreAdresses_activityOptions_exploreAddresses": "Explore Addresses",
  "exploreAdresses_activityOptions_showDescriptor": "Show Descriptor",
...
  "receive_tx_list_receive": "Receive",
  "receive_tx_list_scan": "Scan",
  "receive_tx_list_send": "Send",
  "receive_tx_list_transfer": "Transfer",
  "receive_verifyModalCore_content": "Navigate to {AccountName} on Passport, choose ‘Account Tools’ then ‘Verify Address’ and scan the QR code below.",
...
  "send_keyboard_amount_insufficient_funds_info": "Insufficient Funds",
  "send_keyboard_amount_too_low_info": "Amount too low",
  "send_keyboard_enterAddress": "Enter address",
  "send_keyboard_send_max": "Send Max",
  "send_keyboard_to": "To:",
...
  "settings_advanced_enableBuyRamp": "Buy in Envoy",
  "settings_advanced_enabled_signet_modal_link": "Learn more about Signet [[here]].",
  "settings_advanced_enabled_signet_modal_subheading": "Enabling Signet adds a Signet version of your Envoy Wallet. This feature is primarily used by developers or testers and has zero value.",
  "settings_advanced_enabled_testnet_modal_link": "Learn how to do that [[here]].",
  "settings_advanced_enabled_testnet_modal_subheading": "Enabling Testnet adds a Testnet4 version of your Envoy Wallet, and allows you to connect Testnet accounts from your Passport.",
...
  "stalls_before_sending_tx_scanning_broadcasting_fail_subheading": "Please check your connection and try again",
  "stalls_before_sending_tx_scanning_broadcasting_fail_subsat_subheading": "Please ensure sure the connected node is able to broadcast transactions containing  sub-sat fee rates.",
  "stalls_before_sending_tx_scanning_broadcasting_success_heading": "Your transaction was successfully sent",
  "stalls_before_sending_tx_scanning_broadcasting_success_subheading": "Review the details by tapping on the transaction from the account details screen.",
  "stalls_before_sending_tx_scanning_heading": "Sending transaction",
...
