...
                                        ),
                                        trailing: Padding(
                                          padding: const EdgeInsets.only(
                                            bottom: 2,
                                          ),
                                          child: EnvoyToggle(
                                            label: "magic backup",
                                            value: Settings().syncToCloud,
                                            onChanged: (bool value) async {
                                              if (!value) {
                                                showEnvoyPopUp(
                                                  context,
                                                  S().onboarding_advancedModal_content,
...
