...
  "A": "0",
  "AZTECO VOUCHERS": "ആസ്ടെക്കോ വൗച്ചറുകൾ",
  "Account Name": "Tx വിശദാംശങ്ങൾ ഇവിടെ",
  "Account Type": "തീയതി, സമയ വിവരങ്ങൾ",
  "Account name": "അക്കൗണ്ട് നാമം",
  "Action": "പെടുത്തിയിട്ടില്ല?",
  "Activity": "പ്രവർത്തനം",
  "Add note": "കുറിപ്പ്",
  "Answer": "Answer",
  "Aswer": "പാസ്‌പോർട്ട് ഉപയോഗിച്ച് നിങ്ങൾ ചെയ്യുന്നതെല്ലാം ലളിതമാക്കാൻ രൂപകൽപ്പന ചെയ്‌തിരിക്കുന്ന ഞങ്ങളുടെ ക്രോസ് പ്ലാറ്റ്‌ഫോം പാസ്‌പോർട്ട് കമ്പാനിയൻ ആപ്പാണ് എൻവോയ്. പാസ്‌പോർട്ടിനായുള്ള ഞങ്ങളുടെ മൊബൈൽ കമ്പാനിയൻ ആപ്പാണ് എൻവോയ്, Android-ലും iOS-ലും ലഭ്യമാണ്. എൻവോയ് ഒരു കാര്യക്ഷമമായ പാസ്‌പോർട്ട് സജ്ജീകരണ പ്രക്രിയയും ലളിതവും സ്വകാര്യത സംരക്ഷിക്കുന്നതുമായ ബിറ്റ്‌കോയിൻ വാച്ച്-ഒൺലി വാലറ്റും വാഗ്ദാനം ചെയ
  "August 15, 2023": "ഓഗസ്റ്റ് 15, 2023",
  "Balance": "-ടി.ബി.ഡി",
  "Bitcoin and Asimov’s Foundation": "ബിറ്റ്കോയിനും അസിമോവിന്റെ ഫൗണ്ടേഷനും",
...
  "Passport name": "പാസ്പോർട്ട് പേര്",
  "PermissionDetails": "മെച്ചപ്പെട്ട പ്രകടനം",
  "Primary": "17,210",
  "Question": "Question",
  "Radio group": "ഏറ്റവും കുറഞ്ഞ മൂല്യം",
  "Read": "വായിക്കുക",
  "Receive": "സ്വീകരിക്കുക",
  "Replace me Shield medium": "Replace me\nShield medium",
  "Replace me Splash": "Replace me\nSplash",
  "Requirements Check formatting + layout Address icon (think we already have one) Status icon TxID icon (think we already have one) Date icon": "ആവശ്യകതകൾ ഫോർമാറ്റിംഗ് പരിശോധിക്കുക",
  "Requirements Remix icon": "ആവശ്യകതകൾ റീമിക്സ് ഐക്കൺ",
  "Reset filter": "ഫിൽട്ടർ പുനഃസജ്ജമാക്കുക",
  "Reset sorting": "സോർട്ടിംഗ് പുനഃസജ്ജമാക്കുക",
...
  "ScreenHeading": "9.",
  "ScreenTitle": "അക്കൗണ്ട് വിശദാംശങ്ങൾ",
  "Search input": "പാസ്പോർട്ട്",
  "Search...": "തിരയുക...",
  "Second Value": "0.00",
  "Secondary": "$T.ബി.ഡി",
  "Send": "അയക്കുക",
  "Send Transaction": "ഇടപാട് അയയ്ക്കുക",
  "Sent": "അയച്ചു",
  "Show address": "Show address",
  "Show details": "Show details",
  "Skip": "ഒഴിവാക്കുക",
  "Sort by": "ഇങ്ങനെ അടുക്കുക",
  "Status": "ശീർഷകമില്ലാത്തത്",
  "Subheading": "നിങ്ങളുടെ പാസ്‌ഫ്രെയ്‌സ് സ്ഥിരീകരിക്കുക",
...
  "magic_setup_tutorial_ios_heading": "മാജിക് ബാക്കപ്പുകൾ",
  "magic_setup_tutorial_ios_subheading": "നിങ്ങളുടെ പരമാധികാരം നിലനിർത്തിക്കൊണ്ട് ഒരു പുതിയ ബിറ്റ്കോയിൻ വാലറ്റ് സൃഷ്ടിക്കുന്നതിനുള്ള എളുപ്പവഴി. മാജിക് ബാക്കപ്പുകൾ iCloud കീചെയിൻ ഉപയോഗിച്ച് നിങ്ങളുടെ വാലറ്റും ക്രമീകരണങ്ങളും സ്വയമേവ ബാക്കപ്പ് ചെയ്യുന്നു, 100% എൻഡ്-ടു-എൻഡ് എൻക്രിപ്റ്റ് ചെയ്‌തിരിക്കുന്നു. [[കൂടുതലറിയുക]].",
  "manage_account_address_address": "tb1q33xnrjena6apwnhx5t375djmdn7y6602prrgn7",
  "manage_account_address_card_heading": "പ്രാഥമികം (#0)",
  "manage_account_address_card_subheading": "സ്വകാര്യതയ്ക്കായി, നിങ്ങൾ ഈ സ്ക്രീൻ സന്ദർശിക്കുമ്പോഴെല്ലാം ഞങ്ങൾ ഒരു പുതിയ വിലാസം സൃഷ്ടിക്കുന്നു.",
  "manage_account_address_heading": "അക്കൗണ്ട് വിശദാംശങ്ങൾ",
  "manage_account_descriptor_heading": "Mobile Wallet",
  "manage_account_descriptor_menu": "account details",
  "manage_account_descriptor_subheading": "Make sure not to share this descriptor unless you are comfortable with your transactions being public.",
  "manage_account_menu_delete": "ഇല്ലാതാക്കുക",
  "manage_account_menu_editAccountName": "അക്കൗണ്ട് പേര് എഡിറ്റ് ചെയ്യുക",
  "manage_account_menu_showDescriptor": "ഡിസ്ക്രിപ്റ്റർ കാണിക്കുക",
  "manage_account_remove_cta": "ഇല്ലാതാക്കുക",
...
  "tagged_coin_details_locked_heading": "TAG Details",
  "tagged_coin_details_menu_cta1": "ടാഗ് നാമം എഡിറ്റ് ചെയ്യുക",
  "tagged_coin_details_menu_cta2": "ടാഗ് ഇല്ലാതാക്കുക",
  "tagged_tagDetails_emptyState_explainer": "There are no coins assigned to this tag.",
  "tagged_tagDetails_menu_selectedAmount": "Selected Amount",
  "tagged_tagDetails_selectedAmount": "Selected Amount",
  "tagged_tagDetails_sheet_cta1": "Send Selected",
  "tagged_tagDetails_sheet_cta2": "Tag Selected",
  "tagged_tagDetails_sheet_retag_cta2": "Retag Selected",
  "tap_and_drag_first_time_text": "നിങ്ങളുടെ അക്കൗണ്ടുകൾ വലിച്ചിടാനും പുനഃക്രമീകരിക്കാനും പിടിക്കുക.",
  "tap_and_drag_first_time_text_button": "പിരിച്ചുവിടുക",
  "taproot_passport_dialog_heading": "Taproot on Passport",
  "taproot_passport_dialog_later": "Do It Later",
...
