...
            if (Settings().displayUnit == DisplayUnit.sat) {
              break;
            }

            if (_enteredAmount.isEmpty) {
              setState(() {
                _enteredAmount = "0.";
              });
            }
            if (!_enteredAmount.contains(".")) {
              setState(() {
                _enteredAmount = _enteredAmount + ".";
              });
...
