...
                                            List<Widget> sheetOptions = [];
                                            if (inTagSelectionMode) {
                                              sheetOptions.add(
                                                Semantics(
                                                  container: true,
                                                  identifier:
                                                      "coin_selection_cancel",
                                                  child: GestureDetector(
                                                    onTap: () {
                                                      cancel(context);
                                                    },
                                                    child: Padding(
                                                      padding:
...
