...
          _navBarItems(),
          selectedIndex: _selectedIndex,
          labelStyle: labelStyle,
          onItemSelected: (int index) {
            setState(() {
              if (index == _selectedIndex) {
                // if selected index is "Accounts"
                if (index == 2) {
                  context.go("/");
                } else {
                  return;
                }
              }
...
