...
                      )),
          ),
          Semantics(
            container: true,
            identifier: semanticSuffix != null
                ? 'secondary_amount $semanticSuffix'
                : 'secondary_amount_value',
            child: RichText(
              textScaler: TextScaler.linear(textScaleFactor),
              text: TextSpan(
                  children: unit == AmountDisplayUnit.fiat
                      ? buildFiatTextSpans(
                          amountSats,
...
