...
  "envoy_account_email_verify_user_input": "\nusername@emailprovider.com",
  "envoy_account_email_verify_cta": "open the link using your email app",
  "envoy_account_email_verify_cta1": "Scan the link using a separate device ",
  "envoy_account_leave_app_os_modal_heading": "Leave this app",
  "envoy_account_leave_app_os_modal_subheading": "Please choose your email application from the list",
  "envoy_account_leave_app_os_modal_allow": "OK",
  "envoy_account_leave_app_os_modal_reject": "Back",
  "envoy_mobile_intro_card1_heading": "Congratulations!\nYour account has been setup successfully",
  "envoy_mobile_intro_card1_subheading": "Next, Envoy will guide you through the creation of the three keys that will be used to secure your Bitcoin. \n\n1x Mobile Key (backed up securely to your cloud provider)\n1x Passport Key\n1x Secure and anonymous recovery key (held on the Envoy server)",
  "envoy_mobile_intro_card2_heading": "First, let’s create your Envoy mobile key",
  "envoy_mobile_intro_card2_subheading": "Click continue to automatically generate your mobile key.",
  "envoy_mobile_intro_right_action": "Skip",
  "envoy_mobile_intro_cta": "Continue",
...
