appId: com.foundationdevices.envoy
---
- tapOn:
    id: hamburger_menu
- tapOn: |-
    SETTINGS
    SETTINGS
- tapOn:
    id: Show Fiat Toggle-false
- tapOn:
    id: hamburger_menu
- tapOn:
    id: hamburger_menu
- tapOn: Accounts
